# databricks_case

./: .gitignore  README.md  generate_one_date.py  generate_past.py  main.py  pubsub.py  pyproject.toml
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  provider.tf  teste  variables.tf
utils/: const.py  generator.py  writer.py
